--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,16 @@
 	/* text-align: center; */
 	/* color: white; */
 }
-
-.App-logo {
-	height: 40vmin;
+.logo {
+	float: left;
+}
+.logo > img {
+	height: 40px;
 	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-	.App-logo {
+	.logo > img {
 		animation: App-logo-spin infinite 20s linear;
 	}
 }
@@ -40,4 +42,7 @@
 
 .flex-nowrap {
 	flex-wrap: nowrap;
+}
+.api-server {
+	display: none;
 }
